# domain/user/request_mappers.go
@@ -1,0 +1,10 @@
+package user
+
+func (n *NewUser) ToDomainMapper() *User {
+	return &User{
+		UserName: n.UserName,
+		Email:    n.Email,
+		Age:      n.Age,
+		RoleID:   n.RoleID,
+	}
+}
